dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  # labels:
  #   name: myingress
spec:
  rules:
    - host: <Host>
      http:
        paths:
          # - pathType: Prefix
          #   path: "/"
          - backend:
              service:
                name: <Service>
                port:
                  number: <Port>
